--- a/style.css
+++ b/style.css
@@ -44,3 +44,98 @@ body {
 .active {
   background-color: rgb(230, 83, 60);
 }
+.banner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.banner-col {
+  flex-basis: 50%;
+}
+.banner-title {
+  color: rgb(255, 255, 255);
+  font-size: 60px;
+  font-weight: 900;
+}
+.banner-dec {
+  font-family: "Grey Qo", cursive;
+  font-size: 60px;
+}
+.banner-desceription {
+  color: rgba(255, 255, 255, 0.5);
+  font-size: 16px;
+  font-weight: 400;
+  margin: 20px 0px;
+}
+.one {
+  color: rgb(255, 255, 255);
+  border-radius: 20px;
+  background-color: rgb(230, 83, 60);
+  padding: 10px 20px;
+}
+.two {
+  color: rgb(255, 255, 255);
+  border-radius: 20px;
+  padding: 10px 20px;
+  border: 1px solid rgb(255, 255, 255);
+  background-color: transparent;
+}
+.img-size {
+  text-align: center;
+  position: relative;
+}
+.banner-cardone {
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  padding: 15px;
+  width: 150px;
+  text-align: left;
+  position: absolute;
+  top: 150px;
+  right: 30px;
+}
+.banner-cardone-title {
+  color: rgb(255, 255, 255);
+  font-size: 40px;
+  font-weight: 900;
+}
+.banner-cardone-dec {
+  color: rgba(255, 255, 255, 0.65);
+  font-size: 13px;
+  font-weight: 400;
+}
+.banner-cardtwo {
+  background-color: rgba(48, 48, 48, 0.54);
+  border-radius: 10px;
+  padding: 15px;
+  width: 150px;
+  text-align: left;
+  display: flex;
+  gap: 10px;
+  position: absolute;
+  bottom: 100px;
+}
+.circle {
+  background: rgb(230, 83, 60);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+.banner-cardtwo-title {
+  color: rgb(250, 250, 249);
+  font-size: 24px;
+  font-weight: 900;
+}
+.banner-cardtwo-dec {
+  color: rgba(239, 237, 232, 0.65);
+  font-size: 16px;
+  font-weight: 400;
+}
+.fa-bars,
+.fa-solid {
+  color: aliceblue;
+  
+}
+.icon{
+    display: none;
+}
