--- a/responsive.css
+++ b/responsive.css
@@ -16,4 +16,14 @@
     .banner-cardtwo{
         bottom: 200px;
     }
+    .card-container{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 20px;
+        padding: 20px;
+    }
+    .Habits{
+        padding: 0px 20px;
+    }
 }
