--- a/style.css
+++ b/style.css
@@ -388,7 +388,7 @@ select {
   background-color: rgba(255, 255, 255, 0.1);
 }
 .cardforone {
-  background-image: url(../images/trainer1.png);
+  background-image: url(./images/trainer1.png);
   height: 272px;
   background-size: cover;
   background-repeat: no-repeat;
