--- a/style.css
+++ b/style.css
@@ -395,35 +395,35 @@ select {
   background-position: center;
 }
 .cardfortow {
-  background-image: url(/images/trainer2.png);
+  background-image: url(../images/trainer2.png);
   height: 272px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .cardforthree {
-  background-image: url(/images/trainer3.png);
+  background-image: url(../images/trainer3.png);
   height: 272px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .cardforfore {
-  background-image: url(/images/trainer4.png);
+  background-image: url(../images/trainer4.png);
   height: 272px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .cardforfive {
-  background-image: url(/images/trainer5.png);
+  background-image: url(../images/trainer5.png);
   height: 272px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 .cardforsix {
-  background-image: url(/images/trainer6.png);
+  background-image: url(../images/trainer6.png);
   height: 272px;
   background-size: cover;
   background-repeat: no-repeat;
